Fixed parallax overflow

--- a/assets/styles/completed.scss
+++ b/assets/styles/completed.scss
@@ -181,7 +181,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 999999
+  z-index: 999999;
 }
 
 .dialog-ovelay .dialog {
