--- a/assets/styles/helper/_parallax.scss
+++ b/assets/styles/helper/_parallax.scss
@@ -1,14 +1,15 @@
-.primary-header{
+.primary-header {
   margin-bottom: 0 !important;
 }
 
 .parallax {
   position: relative;
   z-index: 0;
-  min-height: 75svh;
+  min-height: 70svh;
   display: grid;
   grid-template-areas: "stack";
   text-transform: uppercase;
+  contain: paint;
 }
 
 .parallax > img {
